[package]
name = "dumfimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = {version="0.20.0", default-features=false, features=["pancurses-backend"]}
image = {version="0.24.5", default-features=false, features=["png", "jpeg", "tiff", "gif", "bmp", "ico", "webp", "pnm", "dds", "tga", "openexr", "farbfeld"]}
clap = {version="4.0.29", default-features=false, features=["derive", "std"]}